prototype ingredients embeddings
